--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,6 +15,19 @@
       "outFiles": [
         "${workspaceFolder}/**/*.js"
       ]
+    },
+
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Server2",
+      "skipFiles": [
+        "<node_internals>/**"
+      ],
+      "program": "${workspaceFolder}/server2.js",
+      "outFiles": [
+        "${workspaceFolder}/**/*.js"
+      ]
     }
   ]
 }
