--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "author": "Rumen Neshev <rstardev@abv.bg>",
   "license": "MIT",
   "dependencies": {
+    "canvas": "^2.7.0",
     "express": "^4.17.1",
+    "opencv-build": "^0.1.9",
     "opencv4nodejs": "^5.6.0",
-    "socket.io": "^2.3.0"
+    "socket.io": "^2.4.1"
   },
   "devDependencies": {
     "eslint": "^7.7.0",
