--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "canvas": "^2.7.0",
     "express": "^4.17.1",
+    "fastify": "^3.15.1",
     "opencv-build": "^0.1.9",
     "opencv4nodejs": "^5.6.0",
-    "socket.io": "^2.4.1"
+    "socket.io": "^2.4.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "eslint": "^7.7.0",
