--- a/package.json
+++ b/package.json
@@ -12,9 +12,7 @@
   "dependencies": {
     "canvas": "^2.7.0",
     "express": "^4.17.1",
-    "fastify": "^3.15.1",
-    "opencv-build": "^0.1.9",
-    "opencv4nodejs": "^5.6.0",
+    "opencv4nodejs-prebuilt": "^5.3.1",
     "socket.io": "^2.4.1",
     "uuid": "^8.3.2"
   },
