Implement "fswebcam" capture

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -28,6 +28,13 @@
       "outFiles": [
         "${workspaceFolder}/**/*.js"
       ]
-    }
+    },
+
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "File",
+      "program": "${file}",
+    },
   ]
 }
